--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
-    "tslib": "~2.2.0"
+    "tslib": "~2.2.0",
+    "typescript-graph": "^0.2.1"
   },
   "volta": {
     "node": "14.16.1"
