--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@master
     - uses: actions/checkout@v2
     - uses: volta-cli/action@v1
     - run: npm ci --no-audit
